# python-mapper-kata

./: .gitignore  Makefile  README.md  pyproject.toml
app/: __main__.py  transformer.py
app/models/: national_track_and_field_database.py  ntf_db_model.py
example_input/: example_field.json  example_track_1.json  example_track_2.json
tests/: test_transformer.py
tests/models/: test_ntf_db_model.py
tests/test_data/: valid_ntfd_data.json
tests/unit_tests/: test_nothing.py
