[tool.poetry]
name = "mapper-kata"
description = "A kata"
authors = ["Rob Miller"]
version = "1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
